Feature/ad engine/draft/0 (#2064)
* feat: initialize ad engine

[1] Betarena Ad-engine support

* feat: update ad-engine dependency

[1] Update Ad-Engine dependency
[2] Update NPM scripts

* feat: update ad-engine dependency

[1] Update Ad-Engine dependency

* feat: update ad-engine dependency

[1] Update Ad-Engine dependency

* feat: update ad-engine dependency

[1] Update Ad-Engine dependency

* feat: update ad-engine dependency

[1] Update Ad-Engine dependency

--- a/package.json
+++ b/package.json
@@ -1,47 +1,54 @@
 {
 	"name": "betarena-scores-platform",
-	"description": "Betarena Official Scores Platform (PWA)",
 	"version": "2.6.3",
+	"description": "Betarena Official Scores Platform (PWA)",
+	"author": "migbash",
+	"license": "ISC",
 	"type": "module",
 	"engines": {
-		"npm": "10.2.3",
-		"node": "18.19.0"
+		"node": "v18.19.0",
+		"npm": "10.2.3"
 	},
 	"engineStrict": true,
 	"scripts": {
 		"prepare": "is-ci || husky install",
 		"start": "cross-env NODE_OPTIONS='-r dotenv/config' node build/index.js",
-		"build": "cross-env NODE_OPTIONS='-r dotenv/config --max-old-space-size=8192' VITE_SCORES_PKG_VERSION=v.$(npm pkg get version --workspaces=false | tr -d \\\") VITE_SCORES_LIB_PKG_VERSION=v.$(npm info @betarena/scores-lib version | tr -d \\\") VITE_SENTRY_UPLOAD_SOURCEMAPS=true vite build",
-		"build-2": "cross-env NODE_OPTIONS='-r dotenv/config --max-old-space-size=8192' VITE_SCORES_PKG_VERSION=v.$(npm pkg get version --workspaces=false | tr -d \\\") VITE_SCORES_LIB_PKG_VERSION=v.$(npm info @betarena/scores-lib version | tr -d \\\") VITE_SENTRY_UPLOAD_SOURCEMAPS=true vite build",
-		"test": "npm run test:integration && npm run test:unit",
+		"build": "cross-env NODE_OPTIONS='-r dotenv/config --max-old-space-size=8192' VITE_SENTRY_UPLOAD_SOURCEMAPS=true vite build",
+		"build-2": "cross-env NODE_OPTIONS='-r dotenv/config --max-old-space-size=8192' VITE_SENTRY_UPLOAD_SOURCEMAPS=true vite build",
+		"test": "npm run test|:|integration && npm run test|:|unit",
 		"svelte-check": "svelte-check --tsconfig ./tsconfig.json",
-		"svelte-check:|:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"prettier::eslint:|:lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"prettier:|:format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"prettier:|:format:|:src": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ./src",
-		"sveltekit:|:debug": "cross-env NODE_OPTIONS='--inspect' vite dev --host --port 3050",
-		"sveltekit:|:debug:|:bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
-		"sveltekit:|:debug:|:preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 4173",
-		"sveltekit:|:dev": "cross-env NODE_OPTIONS='-r dotenv/config' vite dev --host --port 3050 --force",
-		"sveltekit:|:dev:|:1-click:|:spin": "make dev-1-click-spin",
-		"sveltekit:|:dev:|:docker": "vite dev --host --port 5055",
-		"sveltekit:|:dev:|:docker:up": "docker-compose -f docker-compose.dev.yml up",
-		"sveltekit:|:staging": "npm run sveltekit:|:dev -- --mode staging",
-		"sveltekit:|:build": "vite build",
-		"sveltekit:|:preview": "vite preview --host --port 4173",
-		"sveltekit:|:preview:|:1-click:|:spin": "make preview-1-click-spin",
-		"sveltekit:|:start": "node build/index.js",
-		"sveltekit:|:start:|:docker": "node server-docker.js",
-		"sveltekit:|:start:|:heroku": "node server-heroku.js",
-		"pkg:|:@betarena/scores-lib:|:pull:|:next": "npm i @betarena/scores-lib@latest",
-		"pkg:|:@betarena/scores-lib:|:link": "npm link @betarena/scores-lib",
-		"test:|:integration": "playwright test",
-		"test:|:integration-ui": "playwright test --ui",
-		"test:|:unit": "vitest",
+		"svelte-check|:|watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"prettier|:|eslint|:|lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"prettier|:|format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"prettier|:|format|:|src": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ./src",
+		"sveltekit|:|debug": "cross-env NODE_OPTIONS='--inspect' vite dev --host --port 3050",
+		"sveltekit|:|debug|:|bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
+		"sveltekit|:|debug|:|preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 4173",
+		"sveltekit|:|dev": "cross-env NODE_OPTIONS='-r dotenv/config' vite dev --host --port 3050 --force",
+		"sveltekit|:|dev|:|1-click": "rm -r ./.svelte-kit/ && npm run 'pkg|:|link|:|@betarena-suite' && npm ls --link --global && npm run sass-watch & npm run 'sveltekit|:|dev'",
+		"sveltekit|:|dev|:|1-click|:|standard": "rm -r ./.svelte-kit/ && npm run sass-watch & npm run 'sveltekit|:|dev'",
+		"sveltekit|:|dev|:|docker": "vite dev --host --port 5055",
+		"sveltekit|:|dev|:|docker-up": "docker-compose -f docker-compose.dev.yml up",
+		"sveltekit|:|staging": "npm run sveltekit|:|dev -- --mode staging",
+		"sveltekit|:|build": "vite build",
+		"sveltekit|:|preview": "vite preview --host --port 4173",
+		"sveltekit|:|preview|:|1-click": "make preview-1-click-spin",
+		"sveltekit|:|start": "node build/index.js",
+		"sveltekit|:|start|:|docker": "node server-docker.js",
+		"sveltekit|:|start|:|heroku": "node server-heroku.js",
+		"pkg|:|next|:|@betarena/scores-lib": "npm i @betarena/scores-lib@latest",
+		"pkg|:|link|:|@betarena/scores-lib": "npm link @betarena/scores-lib",
+		"pkg|:|next|:|@betarena/ad-engine": "npm i @betarena/ad-engine@latest",
+		"pkg|:|link|:|@betarena/ad-engine": "npm link @betarena/ad-engine",
+		"pkg|:|link|:|@betarena-suite": "npm link @betarena/scores-lib @betarena/ad-engine",
+		"test|:|integration": "playwright test",
+		"test|:|integration-ui": "playwright test --ui",
+		"test|:|unit": "vitest",
 		"coverage": "vitest run --coverage",
 		"sass-watch": "sass --watch static/app.scss static/app.css"
 	},
 	"dependencies": {
+		"@betarena/ad-engine": "0.0.46",
 		"@betarena/scores-lib": "1.11.0-alpha.13",
 		"@lukeed/uuid": "2.0.1",
 		"@metamask/sdk": "0.1.0",
