--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"sveltekit|:|debug|:|bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
 		"sveltekit|:|debug|:|preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 4173",
 		"sveltekit|:|dev": "cross-env NODE_OPTIONS='-r dotenv/config' vite dev --host --port 3050 --force",
-		"sveltekit|:|dev|:|1-click": "rm -r ./.svelte-kit/ && npm run 'pkg|:|link|:|@betarena-suite' && npm ls --link --global && npm run sass-watch & npm run 'sveltekit|:|dev'",
+		"sveltekit|:|dev|:|1-click": "rm -r ./.svelte-kit/ && npm run 'pkg|:|link|:|@betarena/scores-lib' && npm ls --link --global && npm run sass-watch & npm run 'sveltekit|:|dev'",
 		"sveltekit|:|dev|:|1-click|:|standard": "rm -r ./.svelte-kit/ && npm run sass-watch & npm run 'sveltekit|:|dev'",
 		"sveltekit|:|dev|:|docker": "vite dev --host --port 5055",
 		"sveltekit|:|dev|:|docker-up": "docker-compose -f docker-compose.dev.yml up",
