chore(eslint): update ignore paths
[1] -----
Update to ignore 'api/**' routes from 'EsLint'.

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -65,7 +65,7 @@ ignorePatterns:
   - src/lib/graphql
   - src/lib/redis
   # - src/lib/store
-  # - src/routes
+  - src/routes/api
   - src/lib/types
   - src/params
   - src/service-worker.ts
