--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
 		"sass-watch": "sass --watch static/app.scss static/app.css"
 	},
 	"dependencies": {
-		"@betarena/scores-lib": "1.11.0-alpha.13",
+		"@betarena/scores-lib": "3.0.0",
 		"@lukeed/uuid": "2.0.1",
 		"@metamask/sdk": "0.1.0",
 		"@moralisweb3/client-firebase-auth-utils": "2.18.4",
