--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "betarena-scores-platform",
-	"version": "2.6.9",
+	"version": "2.6.10",
 	"description": "Betarena Official Scores Platform (PWA)",
 	"author": "migbash",
 	"license": "ISC",
@@ -48,7 +48,7 @@
 		"sass-watch": "sass --watch static/app.scss static/app.css"
 	},
 	"dependencies": {
-		"@betarena/scores-lib": "3.0.0",
+		"@betarena/scores-lib": "3.1.7",
 		"@lukeed/uuid": "2.0.1",
 		"@metamask/sdk": "0.1.0",
 		"@moralisweb3/client-firebase-auth-utils": "2.18.4",
@@ -76,11 +76,13 @@
 		"graphql-request": "5.1.0",
 		"graphql-subscriptions-client": "0.16.4",
 		"heroku-ssl-redirect": "0.1.1",
+		"i": "0.3.7",
 		"ibantools": "4.3.3",
 		"ioredis": "5.3.2",
 		"lz-string": "1.5.0",
 		"masonry-layout": "4.2.2",
 		"moralis": "2.18.4",
+		"npm": "10.5.2",
 		"request-ip": "3.3.0",
 		"svelte-apexcharts": "1.0.2",
 		"table": "6.8.1",
