dev: service worker

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -76,7 +76,8 @@
     , "src/**/*.svelte"
     , "docker-server.js"
     , "heroku-server.js"
-  ],
+    , "static/service-worker.js"
+],
   "exclude":
   [
     "build/**/*"
