--- a/package.json
+++ b/package.json
@@ -58,6 +58,11 @@
 		"@sentry/browser": "7.73.0",
 		"@sentry/sveltekit": "7.73.0",
 		"@sentry/tracing": "7.49.0",
+		"@tiptap/core": "2.7.4",
+		"@tiptap/extension-link": "2.7.4",
+		"@tiptap/extension-placeholder": "2.7.4",
+		"@tiptap/pm": "2.7.4",
+		"@tiptap/starter-kit": "2.7.4",
 		"@types/node": "20.8.5",
 		"@walletconnect/web3-provider": "1.8.0",
 		"@web3modal/ethers5": "3.5.7",
