--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"@sentry/sveltekit": "7.73.0",
 		"@sentry/tracing": "7.49.0",
 		"@tiptap/core": "2.7.4",
+		"@tiptap/extension-bubble-menu": "2.8.0",
 		"@tiptap/extension-link": "2.7.4",
 		"@tiptap/extension-placeholder": "2.7.4",
 		"@tiptap/pm": "2.7.4",
