--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"@sentry/tracing": "7.49.0",
 		"@tiptap/core": "2.7.4",
 		"@tiptap/extension-bubble-menu": "2.8.0",
+		"@tiptap/extension-image": "2.8.0",
 		"@tiptap/extension-link": "2.7.4",
 		"@tiptap/extension-placeholder": "2.7.4",
 		"@tiptap/pm": "2.7.4",
