feat(docker): upgrade
[1] ────
Simplify use of 'docker-componse' file to single 'docker-compose', dropping use of based on environment.
[2] ────
Add 'nginx' service for as a reverse proxy.
[3] ────
Update '.dockerignore' file.
[4] ────
Clean up Dockerfile and merged from 'dev.[..]' and 'prod.[..]' files.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,18 +1,47 @@
-# ▓ NOTE:
-# ▓ > 📌 Project
+# ╭──────────────────────────────────────────────────────────────────╮
+# │ 🚀 │ NODE // NPM 					  																		 │
+# ╰──────────────────────────────────────────────────────────────────╯
+
 node_modules/
 npm-debug.log
-.github
-.devcontainer
-.vscode
+.npmrc
+.nvmrc
+
+# ╭──────────────────────────────────────────────────────────────────╮
+# │ 🚀 │ LOCAL // DEVELOPMENT																				 │
+# ╰──────────────────────────────────────────────────────────────────╯
+
+build/
+debug/
+cert/
+.nginx/
+
+# ╭──────────────────────────────────────────────────────────────────╮
+# │ 💠 │ MISCELLENOUS       																				 │
+# ╰──────────────────────────────────────────────────────────────────╯
+
+.github/
+.devcontainer/
+.vscode/
+.docs/
+.docker/
+.husky/
 .eslintrc.yaml
 .gitignore
 .deepsource.toml
 .sentryclirc
 Procfile
 README.md
+CHANGELOG.md
+Procfile
+.deepsource.toml
+
+# ╭──────────────────────────────────────────────────────────────────╮
+# │ 🔑 │ SECRETS                                                     │
+# ╰──────────────────────────────────────────────────────────────────╯
 
 .env*
+!.env
 .flaskenv*
 !.env.project
 !.env.vault
