--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -10,82 +10,46 @@
 // │ 📝 Description                                                                   │
 // ┣──────────────────────────────────────────────────────────────────────────────────┫
 // │ Betarena (Module)
-// │ |: Configuration for TypeScript for SvelteKit
+// │ |: Configuration for TypeScript for Server
 // ╰──────────────────────────────────────────────────────────────────────────────────╯
 
 {
-  "extends": "./.svelte-kit/tsconfig.json",
-	"compilerOptions":
+  "compilerOptions":
   {
     // ╭──────────────────────────────────────────────────────────────────╮
     // │ 📦 │ COMPILER TARGETS                                            │
     // ╰──────────────────────────────────────────────────────────────────╯
+    "outDir": "dist",
     "baseUrl": ".",
-		"moduleResolution": "Node",
-    "module": "es2020",
-    "target": "es2020",
-    // ╭─────
-    // │ NOTE: WARNING: |:| Ignored by 'svelte.config.js'
-    // ╰─────
-    // "outDir": "dist/sveltekit",
-    "lib":
-    [
-      "es2020",
-      "es2021",
-      "DOM",
-      "ES2021.String",
-      "es5",
-      "es6",
-      "dom",
-      "dom.iterable",
-      // ╭─────
-      // │ NOTE: |:| as per 'vite' recommendation
-      // │ read-more :|: https://vitejs.dev/guide/env-and-mode.html
-      // ╰─────
-      "WebWorker"
-    ],
+    "module": "ES2022",
+    "target": "ES2022",
+    "moduleResolution": "Node",
     // ╭──────────────────────────────────────────────────────────────────╮
     // │ 📤 │ COMPILER OPTIONS                                            │
     // ╰──────────────────────────────────────────────────────────────────╯
-    // ╭─────
-    // │ NOTE: IMPORTANT [auto-placed by Svelte]
-    // │ :| svelte-preprocess cannot figure out whether you have a value or a type, so tell TypeScript
-    // │ :| to enforce using `import type` instead of `import` for Types.
-    // ╰─────
-		"importsNotUsedAsValues": "error",
-    "isolatedModules": true,
-    "resolveJsonModule": true,
-    // ╭─────
-    // │ NOTE: IMPORTANT [auto-placed by Svelte]
-    // │ :| To have warnings/errors of the Svelte compiler at the correct position,
-    // │ :| enable source maps by default.
-    // ╰─────
+    "allowJs": true,
+    "checkJs": false,
     "sourceMap": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "allowJs": true,
-    "checkJs": true,
-    "paths":
-    {
-			"$lib": ["src/lib"],
-      "$lib/*": ["src/lib/*"]
-		},
     // ╭──────────────────────────────────────────────────────────────────╮
     // │ 🍁 │ LINTING                                                     │
     // ╰──────────────────────────────────────────────────────────────────╯
-    "strictNullChecks": true
-	},
-	"include":
+    "strict": true,
+    "skipLibCheck": true,
+    "isolatedModules": true,
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true,
+  },
+  "include":
   [
-    "src/**/*.d.ts",
-    "src/**/*.js",
-    "src/**/*.ts",
-    "src/**/*.svelte",
+    "server/**/*.ts"
   ],
   "exclude":
   [
-    "build/**/*",
-    ".svelte-kit/**/*"
+    "node_modules",
+    "dist",
+    "build",
+    ".svelte-kit",
+    "src",
   ]
 }
