--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
 		"@sveltejs/kit": "1.22.3",
 		"@testing-library/jest-dom": "5.16.5",
 		"@testing-library/svelte": "4.0.3",
+		"@types/express": "5.0.0",
 		"@types/masonry-layout": "4.2.5",
 		"@types/ua-parser-js": "0.7.36",
 		"@typescript-eslint/eslint-plugin": "5.59.1",
