--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
 		"unique-username-generator": "1.1.3",
 		"vite-plugin-css-injected-by-js": "3.2.1",
 		"vite-plugin-preload": "0.3.1",
-		"xml-formatter": "2.6.1"
+		"xml-formatter": "2.6.1",
+		"cross-env": "7.0.3"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "17.8.1",
@@ -107,7 +108,6 @@
 		"@typescript-eslint/eslint-plugin": "5.59.1",
 		"@typescript-eslint/parser": "5.59.1",
 		"conventional-changelog-cli": "4.1.0",
-		"cross-env": "7.0.3",
 		"cypress": "12.17.1",
 		"cz-conventional-changelog": "3.3.0",
 		"eslint": "8.51.0",
