feat(docker): update
[1] ────
Update expose port for 'web-prod'

--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     build:
       context: ../
       dockerfile: ./.docker/Dockerfile
-    ports:
-      - 5055:5055
+    expose:
+      - 3000
   #
 
   nginx:
