--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -9,6 +9,11 @@ http
   # │ NOTE: |:| NGINX Configuration for the Frontend | PRODUCTION
   # ╰─────
 
+  upstream scores-prod
+  {
+    server web-prod:3000;
+  }
+
   server
   {
     listen 80;
@@ -38,7 +43,7 @@ http
 
     location /
     {
-      proxy_pass http://web-prod:3000;
+      proxy_pass http://scores-prod;
 
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
