--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -35,8 +35,8 @@ http
 
     server_name scores.betarena.com;
 
-    access_log  /var/log/nginx/access.log;
-    error_log   /var/log/nginx/error.log;
+    access_log  /var/log/nginx/scores/access.log;
+    error_log   /var/log/nginx/scores/error.log;
 
     ssl_certificate     /etc/letsencrypt/live/scores.betarena.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/scores.betarena.com/privkey.pem;
@@ -49,6 +49,27 @@ http
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+    }
+  }
+
+  # ╭─────
+  # │ NOTE: |:| NGINX Configuration for GoAccess | LOCALHOST
+  # ╰─────
+
+  server
+  {
+    listen 8081;
+    listen [::]:8081;
+
+    http2 on;
+
+    access_log  /var/log/nginx/goaccess/access.log;
+    error_log   /var/log/nginx/goaccess/error.log;
+
+    location /
+    {
+      root html;
+      index index.html;
     }
   }
 }
