chore(git): update gitignore
[1] ────
Update '.gitignore' for latest project sturcture.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # ╭──────────────────────────────────────────────────────────────────╮
-# │ 🚀 │ NODE // NPM 					  																		 │
+# │ 🚀 │ NODE / NPM 					  																		 │
 # ╰──────────────────────────────────────────────────────────────────╯
 
 node_modules/
 
 # ╭──────────────────────────────────────────────────────────────────╮
-# │ 🚀 │ LOCAL // DEVELOPMENT																				 │
+# │ 🚀 │ LOCAL DEVELOPMENT / BUILD-OUTPUT														 │
 # ╰──────────────────────────────────────────────────────────────────╯
 
 .svelte-kit/
@@ -35,6 +35,9 @@ debug/**/*/
 !.env.project
 !.env.vault
 .flaskenv*
+
+.docker/goaccess/index.html
+.docker/nginx/logs
 
 # ╭──────────────────────────────────────────────────────────────────╮
 # │ 💻 │ MACOS              																			   │
