ci(github): update actions
[1] ────
Delete 'pr-dev-check.yml' as redundant workflow.
[2] ────
Update 'pr-main-check.yml' for ability to not bump version and cause subsequent deployment.
[3] ────
Update 'pr-main-tag.yml' for removal of '(job) dev-branch-reset' and update '(job) deploy' workflow.

--- a/.github/workflows/pr-main-check.yml
+++ b/.github/workflows/pr-main-check.yml
@@ -78,6 +78,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          mode: exactly
+          mode: maximum
           count: 1
-          labels: 'semver:major, semver:minor, semver:patch'
+          labels: |
+            semver:patch
+            semver:minor
+            semver:major
