chore/hetzner-migration/draft/0 (#2291)
* chore(svelte): update config

[1] ────
Format apply for latest to 'svelte.config.js'.

* feat(docker): upgrade

[1] ────
Simplify use of 'docker-componse' file to single 'docker-compose', dropping use of based on environment.
[2] ────
Add 'nginx' service for as a reverse proxy.
[3] ────
Update '.dockerignore' file.
[4] ────
Clean up Dockerfile and merged from 'dev.[..]' and 'prod.[..]' files.

* chore(git): update .gitignore

[1] ────
Update '.gitignore' for latest projct structure going forward.

* chore(ts): update/add config

[1] ────
Add new 'tsconfig.server.json' config for 'server/' directory compiling.
[2] ────
Update existing 'tsconfig.json' for latest format and expected structure.

* feat(nginx): initialize

[1] ────
Add initial 'nginx.conf' file configuration.

* feat(server): upgrade

[1] ────
Rename and upgrade 'server.docker.ts' for standard 'dual.instance.ts' module for docker deployment.
[2] ────
Delete 'server.heroku.ts' for the moment, might be re-added for posterity.

* refactor(vite): format config

[1] ────
Apply file comment standard format to 'vite.config.ts'.

* feat(make): update targets

[1] ────
Update 'Makefile' for expected docker targets for 'production' and 'nginx'.

* build(package): new dependency

[1] ────
Add '@types/express' dependency.

* build(package): update scripts

[1] ────
Update deployment scripts.

* refactor(package): displace dependency

[1] ────
Add 'cross-env' dependency to 'production' dependencies.

* feat(docker): update

[1] ────
Update expose port for 'web-prod'

* feat(docker,nginx): upgrade

[1] ────
Update 'docker-compose.yaml' for replica use of the 'web-prod' service.
[2] ────
Update 'nginx.conf' for upstream support for 'replica' handling.

* chore(docker,nginx): displace configuration path

[1] ────
Move path for 'nginx.conf' to '.docker/nginx/*' for better structure.

* chore(docker,

--- a/.github/workflows/pr-main-check.yml
+++ b/.github/workflows/pr-main-check.yml
@@ -78,6 +78,53 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          mode: exactly
+          mode: maximum
           count: 1
-          labels: 'semver:major, semver:minor, semver:patch'
+          labels: |
+            semver:patch
+            semver:minor
+            semver:major
+
+  # ╭──────────────────────────────────────────────────────────────────────────────────╮
+  # │ 💠 │ JOB | PULL-REQUEST FORMAT                                                   │
+  # ╰──────────────────────────────────────────────────────────────────────────────────╯
+
+  pull-request-format:
+    runs-on: ubuntu-22.04
+    name: 'JOB :|: pr format'
+    steps:
+
+      - name: 'STEP :|: checkout source code'
+        uses: actions/checkout@v4
+        with:
+          token: '${{ secrets.GH_TOKEN }}'
+          fetch-depth: 0
+          fetch-tags: true
+          ref: ${{ github.head_ref }}
+
+      - name: 'STEP :|: generate PR body'
+        id: testing
+        run: |
+          git fetch origin main:main
+          echo "$(git branch | cat)"
+          echo "$(git branch --show-current)"
+          git log main.. --format=%B | cat > ./temp-pr-body.md
+          echo "$(cat ./temp-pr-body.md)"
+
+      # ╭─────
+      # │ NOTE:
+      # │ |: Not recommended for use
+      # │ |: 🔗 read-more |:| https://github.blog/changelog/2022-10-11-github-actions-deprecating-save-state-and-set-output-commands/
+      # ╰─────
+      - uses: tzkhan/pr-update-action@v2
+        with:
+          repo-token: "${{ secrets.GH_TOKEN }}"
+          base-branch-regex: '.*'
+          head-branch-regex: '.*'
+          title-template: '%headbranch%'
+          title-update-action: 'replace'
+          title-uppercase-head-match: false
+          body-template: null
+            # $(git log main.. --format=%B | cat)
+          body-update-action: 'replace'
+          body-uppercase-base-match: false
