--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,28 @@
-# ╭─────
-# │ NOTE: |:| standard project files
-# ╰─────
-node_modules
-/build
-/.svelte-kit
-/package
-/gif
-certs/*
+# ╭──────────────────────────────────────────────────────────────────╮
+# │ 🚀 │ NODE / NPM 					  																		 │
+# ╰──────────────────────────────────────────────────────────────────╯
+
+node_modules/
+
+# ╭──────────────────────────────────────────────────────────────────╮
+# │ 🚀 │ LOCAL DEVELOPMENT / BUILD-OUTPUT														 │
+# ╰──────────────────────────────────────────────────────────────────╯
+
+.svelte-kit/
+certs/
+gif/
+package/
+build/
+dist/
+
+# ╭──────────────────────────────────────────────────────────────────╮
+# │ 💠 │ MISCELLENOUS       																				 │
+# ╰──────────────────────────────────────────────────────────────────╯
+
+WEBSITE-DEV-README.md
+datalog/
+debug.log
+debug/**/*/
 
 # ╭─────
 # │ CRITICAL |:| project secrets (never uncomment)
@@ -20,19 +36,13 @@ certs/*
 !.env.vault
 .flaskenv*
 
-# ╭─────
-# │ NOTE: |:| miscelleaneous
-# ╰─────
-WEBSITE-DEV-README.md
-datalog/
-debug.log
-debug/**/*/
+.docker/export
+.docker/goaccess/index.html
+.docker/nginx/logs
 
-# ╭─────
-# │ NOTE:
-# │ ➤ MacOS system files
-# ┣─────
-# │ 🔗 read-more |:| https://apple.stackexchange.com/questions/14980/why-are-dot-underscore-files-created-and-how-can-i-avoid-them
-# ╰─────
-.DS_Store
-._*
+# ╭──────────────────────────────────────────────────────────────────╮
+# │ 💻 │ MACOS              																			   │
+# ╰──────────────────────────────────────────────────────────────────╯
+
+**/.DS_Store
+**/._*
