--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"sveltekit|:|preview": "vite preview --host --port 4173",
 		"sveltekit|:|preview|:|1-click": "make preview-1-click-spin",
 		"sveltekit|:|start": "node build/index.js",
-		"sveltekit|:|start|:|docker": "node server-docker.js",
+		"sveltekit|:|start|:|docker": "cross-env NODE_OPTIONS='-r dotenv/config' node dual.instance.js",
 		"sveltekit|:|start|:|heroku": "node server-heroku.js",
 		"pkg|:|next|:|@betarena/scores-lib": "npm i @betarena/scores-lib@latest",
 		"pkg|:|link|:|@betarena/scores-lib": "npm link @betarena/scores-lib",
@@ -45,7 +45,8 @@
 		"test|:|integration-ui": "playwright test --ui",
 		"test|:|unit": "vitest",
 		"coverage": "vitest run --coverage",
-		"sass-watch": "sass --watch static/app.scss static/app.css"
+		"sass-watch": "sass --watch static/app.scss static/app.css",
+		"server|:|build": "tsc --project tsconfig.server.json"
 	},
 	"dependencies": {
 		"@betarena/ad-engine": "0.0.51",
@@ -90,7 +91,8 @@
 		"unique-username-generator": "1.1.3",
 		"vite-plugin-css-injected-by-js": "3.2.1",
 		"vite-plugin-preload": "0.3.1",
-		"xml-formatter": "2.6.1"
+		"xml-formatter": "2.6.1",
+		"cross-env": "7.0.3"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "17.8.1",
@@ -100,12 +102,12 @@
 		"@sveltejs/kit": "1.22.3",
 		"@testing-library/jest-dom": "5.16.5",
 		"@testing-library/svelte": "4.0.3",
+		"@types/express": "5.0.0",
 		"@types/masonry-layout": "4.2.5",
 		"@types/ua-parser-js": "0.7.36",
 		"@typescript-eslint/eslint-plugin": "5.59.1",
 		"@typescript-eslint/parser": "5.59.1",
 		"conventional-changelog-cli": "4.1.0",
-		"cross-env": "7.0.3",
 		"cypress": "12.17.1",
 		"cz-conventional-changelog": "3.3.0",
 		"eslint": "8.51.0",
