--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
 	},
 	"dependencies": {
 		"@betarena/ad-engine": "0.0.51",
-		"@betarena/scores-lib": "4.0.35",
+		"@betarena/scores-lib": "4.0.36",
 		"@lukeed/uuid": "2.0.1",
 		"@metamask/sdk": "0.1.0",
 		"@moralisweb3/client-firebase-auth-utils": "2.18.4",
@@ -75,6 +75,7 @@
 		"colorthief": "2.4.0",
 		"compression": "1.7.4",
 		"cookie": "0.5.0",
+		"cross-env": "7.0.3",
 		"device-detector-js": "3.0.3",
 		"dompurify": "3.1.6",
 		"dotenv": "16.3.1",
@@ -99,8 +100,7 @@
 		"unique-username-generator": "1.1.3",
 		"vite-plugin-css-injected-by-js": "3.2.1",
 		"vite-plugin-preload": "0.3.1",
-		"xml-formatter": "2.6.1",
-		"cross-env": "7.0.3"
+		"xml-formatter": "2.6.1"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "17.8.1",
