--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
 	"dependencies": {
 		"@betarena/ad-engine": "0.0.51",
 		"@betarena/scores-lib": "4.0.37",
-		"@google-cloud/translate": "8.5.0",
 		"@lukeed/uuid": "2.0.1",
 		"@metamask/sdk": "0.1.0",
 		"@moralisweb3/client-firebase-auth-utils": "2.18.4",
@@ -85,6 +84,7 @@
 		"express": "4.18.2",
 		"express-sslify": "1.2.0",
 		"firebase": "9.20.0",
+		"franc": "6.2.0",
 		"graphql-request": "5.1.0",
 		"graphql-subscriptions-client": "0.16.4",
 		"heroku-ssl-redirect": "0.1.1",
